# airborne_server/src/utils/db/models.rs
@@ -5,7 +5,8 @@ use serde::{Deserialize, Serialize};
 
 use crate::utils::db::schema::hyperotaserver::{
     authz_memberships, authz_role_bindings, builds, cleanup_outbox, configs, file_groups, files,
-    packages, packages_v2, release_views, releases, user_credentials, workspace_names,
+    packages, packages_v2, release_views, releases, user_credentials, validation_functions,
+    workspace_names,
 };
 use crate::utils::semver::SemVer;
 
@@ -215,6 +216,26 @@ pub struct NewBuildEntry {
     pub minor_version: i32,
     pub patch_version: i32,
     pub status: String,
+}
+
+#[derive(Queryable, Debug, Selectable, Serialize, Deserialize, Clone)]
+#[diesel(table_name = validation_functions)]
+#[diesel(check_for_backend(diesel::pg::Pg))]
+pub struct ValidationFunction {
+    pub id: uuid::Uuid,
+    pub org_id: String,
+    pub app_id: String,
+    pub function_code: String,
+    pub created_at: DateTime<Utc>,
+    pub updated_at: DateTime<Utc>,
+}
+
+#[derive(Insertable)]
+#[diesel(table_name = validation_functions)]
+pub struct NewValidationFunction<'a> {
+    pub org_id: &'a str,
+    pub app_id: &'a str,
+    pub function_code: &'a str,
 }
 
 #[derive(Queryable, Insertable, Debug, Selectable, Serialize)]
