# airborne_server/src/utils/db/schema.rs
@@ -185,6 +185,17 @@ pub mod hyperotaserver {
     }
 
     diesel::table! {
+        hyperotaserver.validation_functions (id) {
+            id -> Uuid,
+            org_id -> Text,
+            app_id -> Text,
+            function_code -> Text,
+            created_at -> Timestamptz,
+            updated_at -> Timestamptz,
+        }
+    }
+
+    diesel::table! {
         hyperotaserver.workspace_names (id) {
             id -> Int4,
             organization_id -> Text,
@@ -207,6 +218,7 @@ pub mod hyperotaserver {
         release_views,
         releases,
         user_credentials,
+        validation_functions,
         workspace_names,
     );
 }
